--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Trenton/ownCloud/main/dev/java/LibraryApp/mysql-connector-java-5.1.33-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Trenton/ownCloud/main/dev/java/LibraryApp/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
